# CMakeJuceAudioApp

./: CMakeLists.txt  README.md  README.txt
AudioApp/: CMakeLists.txt
AudioApp/src/: MainComponent.cpp  MainComponent.h  myGPIO.h
cmake/: cpm.cmake
